2000-11-04  Jeff Freedman  <jeff@amy.nerble.net>

	* vgafile.cc, combat.cc:  Look up ammo family.
	* actors.cc: Ready ammo. automatically.

2000-11-04  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gumps.cc: stopped bags from disappearing when put into another bag.

2000-11-04  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc: keycommands only get activated when ctrl/alt status is exactly correct
	* exult.cc: updated help screens

2000-11-04  Ryan Nunn <triforce@merlin.net.au>
	* gumps.cc, audio/Audio.cc: Sound Effects button now works and state is saved.
	* audio/Midi.*: sfx.dat is now called midisfx.flx. It must be in the data dir.
	Fixed bug causing midi to never be played.

2000-11-03  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Look backwards for closest schedule change when
	clock is incremented more than a tick.

2000-11-02  Tristan Tarrant  <nadir@users.sourceforge.net>

	* tools/u7shpload.c: Require latest gimp include files (>=1.1.26)

2000-11-02  Tristan Tarrant  <nadir@users.sourceforge.net>

	* tools/u7shpload.c: Beginnings of tile (8x8) support
	* data/marketpl.mid: MIDI for intro menu
	* audio/Audio.*, audio/Midi.*: add methods for loading generic MIDI

2000-10-30  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode.cc: Kludges for Test of Courage.

2000-10-28  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Include weapon area in add_dirty(); cleans up
	graphics left behind when large weapon is carried.

2000-10-27  Jeff Freedman  <jeff@amy.nerble.net>

	* Straightened out virtue stones.

2000-10-26  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed (actually, worked-around) virtue-stone bug.

2000-10-24  Jeff Freedman  <jeff@amy.nerble.net>

	* Reagants bug & resolution-change bug fixed.
	* Version changed to Alpha.01.

2000-10-19  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed 2 bugs: Crash in Despise after generator, and problem with
	readying 2-handed weapons on 'restore'.

2000-10-17  Jeff Freedman  <jeff@amy.nerble.net>
