@@ -29,8 +29,9 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "usecode.h"
 #include "items.h"
 #include "mouse.h"
+#include "cheat.h"
 
-extern bool wizard_mode;
+extern Cheat cheat;
 
 const int REAGANTS = 842;		// Shape #.
 
@@ -238,7 +239,7 @@ Spellbook_gump::Spellbook_gump
 		int spindex = c*8;
 		unsigned char cflags = book->circles[c];
 		for (int s = 0; s < 8; s++)
-			if ((cflags & (1<<s)) || wizard_mode)
+			if ((cflags & (1<<s)) || cheat.in_wizard_mode())
 				spells[spindex + s] = new Spell_button(this,
 					s < 4 ? object_area.x +
 						spshape->get_xleft()
@@ -275,11 +276,11 @@ void Spellbook_gump::do_spell
 	int spell
 	)
 	{
-	if ((spells[spell] && avail[spell]) || wizard_mode)
+	if ((spells[spell] && avail[spell]) || cheat.in_wizard_mode())
 		{
 		Game_window *gwin = Game_window::get_game_window();
 		int circle = spell/8;	// Figure/subtract mana.
-		if (wizard_mode)
+		if (cheat.in_wizard_mode())
 			circle = 0;
 		int mana = gwin->get_main_actor()->get_property(Actor::mana);
 		int level = gwin->get_main_actor()->get_level();
@@ -294,7 +295,7 @@ void Spellbook_gump::do_spell
 					// Figure what we used.
 		unsigned char flags = reagants[spell];
 
-		if (!wizard_mode) {
+		if (!cheat.in_wizard_mode()) {
 					// Go through bits.
 			for (int r = 0; flags; r++, flags = flags >> 1)
 					// Remove 1 of each required reagant.
@@ -408,7 +409,7 @@ void Spellbook_gump::paint
 		paint_button(gwin, rightpage);
 	int spindex = page*8;		// Index into list.
 	for (int s = 0; s < 8; s++)	// Paint spells.
-		if (spells[spindex + s] || wizard_mode)
+		if (spells[spindex + s] || cheat.in_wizard_mode())
 			{
 			Gump_button *spell = spells[spindex + s];
 			paint_button(gwin, spell);
